fixed running jump bug and jump to platform, add some simple ui

--- a/project/RWProject/css/multi.css
+++ b/project/RWProject/css/multi.css
@@ -150,8 +150,8 @@ body {
 }
 
 .uiimage {
-    width: 50%;
-    height: 50%;
+    width: 40%;
+    height: 40%;
 }
 
 #menucontainer {
